@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
     <script src="main.js"></script>
     <link type="text/css" rel="stylesheet" href="experiments.css" />
     <link type="text/css" rel="stylesheet" href="style.css" />
